# Ssut_tarija

./: .editorconfig  .env.template  .gitignore  AGREGAR_AREA_AUDITORIA.md  ANALISIS_FLUJO_INSCRIPCION_COMPLETO.md  ANALISIS_FLUJO_OPTIMIZACION_GLOBAL.md  ANALISIS_MEJORAS_ADICIONALES.md  ANALISIS_PANTALLAS_ADICIONALES.md  ANALISIS_PANTALLAS_PERFIL.md  ANALISIS_SERVICIOS_OCR.md  APLICACION_COLORES_INSTITUCIONALES_MASIVA.md  APLICAR_AREA_AUDITORIA.sql  APLICAR_CAMBIOS_VALIDACION.bat  ARRANCAR_SIMPLE.bat  ARRANQUE.md  AUDITORIA_COMPLETA_APP.md  Arquitectura_Desarrollo_Ejecucion.html  Arquitectura_Sistema_Detalle.md  CAMBIOS_SPRINT_MARZO_2026.md  CAMBIOS_VALIDACION_RANGO_MEJORADA.md  COMENTARIOS_CODIGO_CARPETAS.md  CORRECCION_COMBOBOX_Y_COMPROBANTE.md  CORRECCION_ERRORES_CRITICOS.md  CORRECCION_ERROR_PARENT_DATA_DIRTY.md  CORRECCION_ERROR_SINTAXIS.md  CORRECCION_GENERACION_AUTOMATICA_DOCUMENTOS.md  CORRECCION_INFINITY_PDF_VIEWER.md  CORRECCION_INICIO_SCREEN.md  CORRECCION_MODO_OSCURO_Y_AVATAR.md  CORRECCION_PASOS_DUPLICADOS_INSCRIPCION.md  CORRECCION_PERFIL_SCREEN_FINAL.md  CORRECCION_VALIDACION_DATOS_PERSONALES.md  DASHBOARD_REPORTES_RESUMEN.md  DIAGRAMA_FLUJO_REMOVER_FONDO.md  DOCUMENTACION_TECNICA_SISTEMA.md  DiccionarioDatos.md  DiccionarioDatos_19_Tablas.html  DiccionarioDatos_19_Tablas.md  ESTADO_FINAL_FLUJO_INSCRIPCION.md  ESTRUCTURA_PROYECTO.md  (+130 more)
.kiro/hooks/: figma-code-connect.kiro.hook
.kiro/steering/: design-system.md
.qwen/: settings.json
.zencoder/rules/: repo.md
android/: gradle.properties
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/cpp/: CMakeLists.txt
assets/: COMO_PONER_EL_LOGO.md  regula.license
assets/templates/: carta_solicitud_inscripcion_diplomado.html  carta_solicitud_inscripcion_doctorado.html  carta_solicitud_inscripcion_especialidad.html  (+2 more)
backend/: CONEXION_BD.md  Program.cs  appsettings.Development.json  appsettings.json  cerrar_backend.ps1  migrar.sql  run_backend.bat  run_backend.ps1
database/: APLICAR_BLOQUEO_PROGRESIVO.bat  APLICAR_BLOQUEO_PROGRESIVO.js  EJECUTAR_MIGRACION_009.md  INSTRUCCIONES_011_pregunta_secreta.md  SCRIPT_BLOQUEO_PROGRESIVO.txt  VERIFICAR_CAMPO.js  add_auditoria_area.sql  add_bloqueos_acumulados.sql  aplicar_matriz.sql  cambiar_rol_a_texto.sql  corregir_backend_db.sql  corregir_columnas_carpetas.sql  corregir_enum_rol.sql  corregir_restriccion_rol.sql  corregir_rol_simple.sql  create_permisos_tables.sql  datos_iniciales.sql  esquema.sql  esquema_corregido.sql  esquema_optimizado.sql  fix_carpetas_columns.sql  migrar_limpieza_roles.sql  reinicializar_carpetas.sql  respaldo_antes_migracion.sql  script_migracion.sql
docs/: BD_LOCAL_USUARIOS.md  GUIA_VALIDACION_REQUISITOS.md
frontend/: ARQUITECTURA_EXPLICACION.md  COMO_HACER_GIT_PULL.md  MVC_RESUMEN.md  PARTES_DEL_SISTEMA_DETALLE.md  RESOLVER_MERGE_CONFLICTOS.md  analysis_options.yaml  pubspec.yaml
lib/: main.dart  test_pin_debug.dart
linux/: CMakeLists.txt
scripts/: fix_utf8_mojibake.py
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+528 files in other folders)
